--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/carbon__icons-react": "^11.16.0"
   }
 }
