--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.3.1",
+    "contentlayer": "^0.3.4",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
-    "next-contentlayer": "^0.3.1",
+    "next-contentlayer": "^0.3.4",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-wrap-balancer": "^0.4.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/carbon__icons-react": "^11.16.0"
+    "@types/carbon__icons-react": "^11.17.0"
   }
 }
