--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
   "dependencies": {
     "@carbon/icons-react": "^11.39.0",
     "@mdx-js/react": "^2.3.0",
+    "@prisma/client": "^6.2.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lucide-react": "^0.469.0",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.21",
+    "prisma": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-wrap-balancer": "^0.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
   }
 }
