--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.3",
     "react-wrap-balancer": "^0.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.1",
