--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
